--- a/vector.html
+++ b/vector.html
@@ -4,24 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Data</title>
+    <title>Vector Sum</title>
 
     <!-- JAVASCRIPT -->
-    <!-- Putting it here makes it load before. -->
-    <script type="text/javascript" src="ex2.js"></script>
+    <!--<script type="text/javascript" src="ex1.js"></script>-->
 </head>
-
-<body onload="myFunction()">
+<body>
     <!-- MENU -->
     <div align="center">
-        <h1>Website Data</h1>
+        <h1>Vector Sum</h1>
     </div>
+
     <hr size="3%" color="black" noshade>
-
-    <!-- DATA -->
-    <div id="tableData" align="center"></div>
-
+    
 </body>
+</html>
 
 <footer>
     <div align="right">
