--- a/quadratic.html
+++ b/quadratic.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="ex3.js"></script>
     <title>Quadratic</title>
 </head>
 <body>
@@ -19,16 +20,21 @@
         <img src="images/quadraticEquation.png" alt="Quadratic Equation" width="30%">
     </div>
 
-    <!-- FORM -->
+    <!-- FORM: INPUT VALUES -->
     <div align="center">
         <form action="/action_page.php">
-            <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname" value="John"><br>
-            <label for="lname">Last name:</label><br>
-            <input type="text" id="lname" name="lname" value="Doe"><br><br>
-            <input type="submit" value="Submit">
-        </form>         
+            <label>a = </label>
+            <input type="text" id="a_val" placeholder="value..."><br>
+            <label>b = </label>
+            <input type="text" id="b_val" placeholder="value..."><br>
+            <label">c = </label>
+            <input type="text" id="c_val" placeholder="value..."><br><br>
+            <input type ="button" value="Calculate!" id="res_button" onclick="addResult()">
+        </form>
     </div>
+
+    <br>
+    <div align="center" id="result"></div>
 
 </body>
 </html>
