deploy asynchronous application

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1>JavaScript Exercises</h1>
         <nav>
             <a href="data.html">Data</a> |
+            <a href="async.html">Async</a> |
             <a href="quadratic.html">Quadratic</a> |
             <a href="vector.html">Vector</a>
           </nav>
