--- a/async.html
+++ b/async.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <!-- JAVASCRIPT -->
     <script type="text/javascript" src="ex6.js"></script>
 </head>
+
 <body>
     <!-- MENU -->
     <div align="center">
@@ -17,8 +19,15 @@
     </div>
     <hr size="3%" color="black" noshade>
 
-
+    <div id="info"></div>
 
 
 </body>
+
+<footer>
+    <div align="right">
+        <a id="back_index" href="index.html">Go Back!</a>
+    </div>
+</footer>
+
 </html>
