functioning api clock, setTimeout in order to reduce the number of calls

--- a/apiCall.html
+++ b/apiCall.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Api Call</title>
 
-    <title>Async Application</title>
-
-    <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="ex6.js"></script>
+    <!-- JAVSCRIPT -->
+    <script type="text/javascript" src="ex7.js"></script>
 </head>
-
 <body>
     <!-- MENU -->
     <div align="center">
-        <h1>Async Application</h1>
+        <h1>Api Call</h1>
     </div>
     <hr size="3%" color="black" noshade>
 
-    <div id="info"></div>
+    <div align="center">
+        <p id="time-paragraph"></p>
 
+        <button id="button-call" onclick="getTime()">The Time</button>
+    </div>
 </body>
 
 <footer>
@@ -28,5 +28,4 @@
         <a id="back_index" href="index.html">Go Back!</a>
     </div>
 </footer>
-
 </html>
