--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <nav>
             <a href="data.html">Data</a> |
             <a href="async.html">Async</a> |
+            <a href="apiCall.html">Api</a> |
             <a href="quadratic.html">Quadratic</a> |
             <a href="vector.html">Vector</a>
           </nav>
