functioning api clock, setTimeout in order to reduce the number of calls

--- a/apiCall.html
+++ b/apiCall.html
@@ -9,7 +9,7 @@
     <!-- JAVSCRIPT -->
     <script type="text/javascript" src="ex7.js"></script>
 </head>
-<body>
+<body  onload="getTime()">
     <!-- MENU -->
     <div align="center">
         <h1>Api Call</h1>
@@ -18,8 +18,6 @@
 
     <div align="center">
         <p id="time-paragraph"></p>
-
-        <button id="button-call" onclick="getTime()">The Time</button>
     </div>
 </body>
 
