get request partially functioning.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <h1>JavaScript Exercises</h1>
         <nav>
             <a href="data.html">Data</a> |
-            <a href="async.html">Async</a> |
+            <a href="asyncPost.html">Async (POST)</a> |
+            <a href="asyncGet.html">Async (GET)</a> |
             <a href="apiCall.html">Api</a> |
             <a href="quadratic.html">Quadratic</a> |
             <a href="vector.html">Vector</a>
