new css addings

--- a/apiCall.html
+++ b/apiCall.html
@@ -8,6 +8,9 @@
 
     <!-- JAVSCRIPT -->
     <script type="text/javascript" src="ex7.js"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="main.css">
 </head>
 <body  onload="getTime()">
     <!-- MENU -->
