--- a/asyncPost.html
+++ b/asyncPost.html
@@ -10,6 +10,9 @@
 
     <!-- JAVASCRIPT -->
     <script type="text/javascript" src="ex6.js"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
