--- a/data.html
+++ b/data.html
@@ -9,6 +9,9 @@
     <!-- JAVASCRIPT -->
     <!-- Putting it here makes it load before. -->
     <script type="text/javascript" src="ex2.js"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body onload="myFunction()">
