--- a/vector.html
+++ b/vector.html
@@ -8,6 +8,9 @@
 
     <!-- JAVASCRIPT -->
     <script type="text/javascript" src="ex5.js"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <!-- MENU -->
@@ -31,7 +34,6 @@
 
     <!-- RESULT -->
     <div align="center" id="result"></div>
-    
 </body>
 </html>
 
