--- a/quadratic.html
+++ b/quadratic.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="ex3.js"></script>
     <title>Quadratic</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <!-- MENU -->
