--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <a href="asyncPost.html">Async (POST)</a> |
             <a href="asyncGet.html">Async (GET)</a> |
             <a href="apiCall.html">Api</a> |
+            <a href="mosquitto.html">Mosquitto App</a> |
             <a href="quadratic.html">Quadratic</a> |
             <a href="vector.html">Vector</a>
         </nav>
