all buttons replaced

--- a/mosquitto.html
+++ b/mosquitto.html
@@ -27,10 +27,14 @@
         <label>User: </label><input type="text" id="user-box">
         <br>
         <label>Room: </label><input type="text" id="room-box">
-        <br>
-        <input type="button" value="Connect!" id="connect-button">
-        <input type="button" value="Publish!" id="publish-button">
     </div>
+
+    <div align="center">
+        <button id="connect-button">Connect!</button>
+        <button id="publish-button">Publish!</button>
+    </div>
+
+
 
 </body>
 
