--- a/quadratic.html
+++ b/quadratic.html
@@ -32,8 +32,13 @@
             <input type="text" id="b_val" placeholder="value..."><br>
             <label">c = </label>
             <input type="text" id="c_val" placeholder="value..."><br><br>
-            <input type ="button" value="Calculate!" id="res_button" onclick="addResult()">
         </form>
+        
+    </div>
+
+    <!-- FORM: BUTTONS -->
+    <div align="center">
+        <button id="res_button" onclick="addResult()">Calculate!</button>
     </div>
 
     <br>
