--- a/vector.html
+++ b/vector.html
@@ -28,8 +28,8 @@
 
     <!-- FORM: BUTTONS -->
     <div align="center" id="vector_buttons">
-        <input type="button" value="Add" onclick="addComponents()">
-        <input type="button" value="Sum" onclick="toArray()">
+        <button onclick="addComponents()">Add</button>
+        <button onclick="toArray()">Sum</button>
     </div>
 
     <!-- RESULT -->
