Deep down in Ajax... Async

--- a/apiCall.html
+++ b/apiCall.html
@@ -7,7 +7,7 @@
     <title>Api Call</title>
 
     <!-- JAVSCRIPT -->
-    <script type="text/javascript" src="ex7.js"></script>
+    <script type="text/javascript" src="ex12.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="main.css">
@@ -20,7 +20,7 @@
     <hr>
 
     <div align="center">
-        <p id="time-paragraph"></p>
+        <p id="time-paragraph">Loading...</p>
     </div>
 </body>
 
