promises intro done

--- a/apiCall.html
+++ b/apiCall.html
@@ -12,7 +12,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="main.css">
 </head>
-<body  onload="getTime()">
+<body>
     <!-- MENU -->
     <div align="center">
         <h1>Api Call</h1>
