rename everything clock.html related

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="data.html">Data</a> |
             <a href="asyncPost.html">Async (POST)</a> |
             <a href="asyncGet.html">Async (GET)</a> |
-            <a href="apiCall.html">Api</a> |
+            <a href="clock.html">Clock</a> |
             <a href="mosquitto.html">Mosquitto App</a> |
             <a href="quadratic.html">Quadratic</a> |
             <a href="vector.html">Vector</a>
