iss map implementation done (changes may possible occur)

--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
             <a href="clock.html">Clock</a> |
             <a href="mosquitto.html">Mosquitto App</a> |
             <a href="quadratic.html">Quadratic</a> |
-            <a href="vector.html">Vector</a>
+            <a href="vector.html">Vector</a> |
+            <a href="map.html">ISS Map</a>
         </nav>
     </div>
-    
     <hr>
-
 
     <!-- PAGES -->
     <div align="center" style="padding: 0% 10%;">
