user location distance added to ISS Map.

--- a/map.html
+++ b/map.html
@@ -25,7 +25,12 @@
 
     <div id="map"></div>
 
+    <div align="center">
+        <p id="distance-iss">Loading...</p>
+    </div>
+
     <!-- JAVSCRIPT -->
+    
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
         integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
         crossorigin=""></script>
