reading and coverting to binary done.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="mosquitto.html">Mosquitto App</a> |
             <a href="quadratic.html">Quadratic</a> |
             <a href="vector.html">Vector</a> |
+            <a href="compress.html">Compress</a> |
             <a href="map.html">ISS Map</a>
         </nav>
     </div>
