Run-Length Encoding Done !

--- a/compress.html
+++ b/compress.html
@@ -19,13 +19,12 @@
     </div>
     <hr>
     <br>
-
-    <div align="center">
-        <input type="file" onchange="readFile(this)">
-    </div>
-
-
     
+    <!-- Run-Lenght Encoding-->
+    <h2>Run-Lenght Encoding</h2>
+    <div align="center">
+        <input type="file" onchange="readFile(this)" id="txt_upload" accept=".txt">
+    </div>
 </body>
 
 <footer>
