javascript directory created

--- a/asyncGet.html
+++ b/asyncGet.html
@@ -9,7 +9,7 @@
     <title>Async Application</title>
 
     <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="ex8.js"></script>
+    <script type="text/javascript" src="javascript/ex8.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="main.css">
