--- a/clock.html
+++ b/clock.html
@@ -7,7 +7,7 @@
     <title>Clock</title>
 
     <!-- JAVSCRIPT -->
-    <script type="text/javascript" src="ex12.js"></script>
+    <script type="text/javascript" src="javascript/ex12.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="main.css">
