--- a/map.html
+++ b/map.html
@@ -34,7 +34,7 @@
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
         integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
         crossorigin=""></script>
-    <script type="text/javascript" src="ex15.js"></script>
+    <script type="text/javascript" src="javascript/ex15.js"></script>
 </body>
 
 <footer>
