--- a/vector.html
+++ b/vector.html
@@ -7,7 +7,7 @@
     <title>Vector Sum</title>
 
     <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="ex5.js"></script>
+    <script type="text/javascript" src="javascript/ex5.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="main.css">
