--- a/asyncPost.html
+++ b/asyncPost.html
@@ -9,7 +9,7 @@
     <title>Async Application</title>
 
     <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="ex6.js"></script>
+    <script type="text/javascript" src="javascript/ex6.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="main.css">
