--- a/compress.html
+++ b/compress.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="main.css">
 
     <!-- JAVSCRIPT -->
-    <script type="text/javascript" src="ex17.js"></script>
+    <script type="text/javascript" src="javascript/ex17.js"></script>
 </head>
 <body>
     <!-- MENU -->
