--- a/data.html
+++ b/data.html
@@ -8,7 +8,7 @@
 
     <!-- JAVASCRIPT -->
     <!-- Putting it here makes it load before. -->
-    <script type="text/javascript" src="ex2.js"></script>
+    <script type="text/javascript" src="javascript/ex2.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="main.css">
