--- a/html/asyncPost.html
+++ b/html/asyncPost.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Data</title>
+
+    <title>Async Application</title>
 
     <!-- JAVASCRIPT -->
-    <!-- Putting it here makes it load before. -->
-    <script type="text/javascript" src="javascript/ex2.js"></script>
+    <script type="text/javascript" src="../javascript/ex6.js"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
-<body onload="myFunction()">
+<body>
     <!-- MENU -->
     <div align="center">
-        <h1>Website Data</h1>
+        <h1>Async Application</h1>
     </div>
     <hr>
 
-    <!-- DATA -->
-    <div id="tableData" align="center"></div>
+    <div id="info"></div>
 
 </body>
 
@@ -31,4 +31,5 @@
         <a id="back_index" href="index.html">Go Back!</a>
     </div>
 </footer>
+
 </html>
