--- a/html/clock.html
+++ b/html/clock.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clock</title>
 
-    <title>Async Application</title>
-
-    <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="javascript/ex6.js"></script>
+    <!-- JAVSCRIPT -->
+    <script type="text/javascript" src="../javascript/ex12.js"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
-
 <body>
     <!-- MENU -->
     <div align="center">
-        <h1>Async Application</h1>
+        <h1>Clock</h1>
     </div>
     <hr>
 
-    <div id="info"></div>
-
+    <div align="center">
+        <p id="time-paragraph">Loading...</p>
+    </div>
 </body>
 
 <footer>
@@ -31,5 +29,4 @@
         <a id="back_index" href="index.html">Go Back!</a>
     </div>
 </footer>
-
 </html>
