--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <title>JavaScript Exercises</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
