--- a/html/map.html
+++ b/html/map.html
@@ -7,7 +7,7 @@
     <title>ISS MAP</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" 
         integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" 
         crossorigin=""/>
@@ -33,7 +33,7 @@
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
         integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
         crossorigin=""></script>
-    <script type="text/javascript" src="javascript/ex15.js"></script>
+    <script type="text/javascript" src="../javascript/ex15.js"></script>
 </body>
 
 <footer>
