--- a/html/mosquitto.html
+++ b/html/mosquitto.html
@@ -10,10 +10,10 @@
 
     <!-- JAVASCRIPT -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"></script>
-    <script type="module" src="javascript/ex9_server.js"></script>
+    <script type="module" src="../javascript/ex9_server.js"></script>
     
     <!-- CSS -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
