--- a/html/compress.html
+++ b/html/compress.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Compression</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="main.css">
-
     <!-- JAVSCRIPT -->
-    <script type="text/javascript" src="javascript/ex17.js"></script>
+    <script type="text/javascript" src="../javascript/ex17.js"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <!-- MENU -->
