--- a/html/quadratic.html
+++ b/html/quadratic.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="javascript/ex3.js"></script>
     <title>Quadratic</title>
 
+    <!-- JAVSCRIPT -->
+    <script type="text/javascript" src="../javascript/ex3.js"></script>
+
     <!-- CSS -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <!-- MENU -->
@@ -20,7 +22,7 @@
 
     <!-- FORMULA IMAGE-->
     <div align="center">
-        <img src="images/quadraticEquation.png" alt="Quadratic Equation" width="30%">
+        <img src="../images/quadraticEquation.png" alt="Quadratic Equation" width="30%">
     </div>
 
     <!-- FORM: INPUT VALUES -->
