--- a/html/vector.html
+++ b/html/vector.html
@@ -7,10 +7,10 @@
     <title>Vector Sum</title>
 
     <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="javascript/ex5.js"></script>
+    <script type="text/javascript" src="../javascript/ex5.js"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <!-- MENU -->
