additions to WSend

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
+
+    <script type="text/javascript" src="../javascript/ex18_client.js"></script>
 </head>
 
 <body>
@@ -21,6 +23,7 @@
             <a href="quadratic.html">Quadratic</a> |
             <a href="vector.html">Vector</a> |
             <a href="compress.html">Compress</a> |
+            <a href="websocket.html">WSend</a> |
             <a href="map.html">ISS Map</a>
         </nav>
     </div>
