--- a/react/index.html
+++ b/react/index.html
@@ -4,19 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Application 1</title>
+        <title>React App</title>
 
         <!-- JAVASCRIPT MODULES-->
         <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
         
-
     </head>
     <body>
         <!-- JAVASCRIPT MAIN FILE-->
-        <script type="text/babel" src="reactApp.js"></script>
         <div id="root"></div>
+        <script type="text/babel" src="homeMod.js"></script>
     </body>
 </html>
