--- a/sandbox/html/aMoreProfessionalPortfolio.html
+++ b/sandbox/html/aMoreProfessionalPortfolio.html
@@ -15,10 +15,10 @@
 </head>
 <body>
     <div class="top-container">
-        <img src="../imgs/cloud.png" alt="cloud">
+        <img src="../imgs/cloud.png" alt="cloud" class="top-cloud">
         <h1>Edsger Dijkstra</h1>
         <p>Edsger Wybe Dijkstra; 11 May 1930 – 6 August 2002) was a Dutch computer scientist.</p>
-        <img src="../imgs/cloud.png" alt="cloud">
+        <img src="../imgs/cloud.png" alt="cloud" class="bottom-cloud">
         <img src="../imgs/mountain.png" alt="mountain">
     </div>
     <div class="middle-container"></div>
