--- a/sandbox/html/tic-tac-toe.html
+++ b/sandbox/html/tic-tac-toe.html
@@ -10,12 +10,23 @@
     <!-- TAB -->
     <title>Tic Tac Toe</title>
 
-    <!-- CSS -->
+    <!-- CSS & JAVASCRIPT -->
     <link rel="stylesheet" href="../css/style6.css">
+    <script type="text/javascript" src="../funcTicTacToe.js"></script>
 </head>
 <body>
     <div id="background">
-        <div id="board"></div>
+        <div id="board">
+            <div id="square1" class="board-box" onclick="counter(0)"></div>
+            <div id="square2" class="board-box" onclick="counter(1)"></div>
+            <div id="square3" class="board-box" onclick="counter(2)"></div>
+            <div id="square4" class="board-box" onclick="counter(3)"></div>
+            <div id="square5" class="board-box" onclick="counter(4)"></div>
+            <div id="square6" class="board-box" onclick="counter(5)"></div>
+            <div id="square7" class="board-box" onclick="counter(6)"></div>
+            <div id="square8" class="board-box" onclick="counter(7)"></div>
+            <div id="square9" class="board-box" onclick="counter(8)"></div>
+        </div>
     </div>
 </body>
 </html>
