--- a/sandbox/html/index.html
+++ b/sandbox/html/index.html
@@ -15,13 +15,15 @@
 </head>
 <body>
     <div id="root">
-        <h1>网站的链接</h1>
+        <h1>Links de Página Web</h1>
     </div>
     <div id="links">
-        <a href="boxModel.html">第一题</a>
-        <a href="aMoreProfessionalPortfolio.html">第二题</a>
-        <a href="relativePosition.html">第三题</a>
-        <a href="absolutePosition.html">第四题</a>
+        <a href="boxModel.html">Ejercicio 1</a>
+        <a href="aMoreProfessionalPortfolio.html">Ejercicio 2</a>
+        <a href="relativePosition.html">Ejercicio 3</a>
+        <a href="absolutePosition.html">Ejercicio 4</a>
+        <a href="absolutePosition.html">Ejercicio 5</a>
+        <a href="tic-tac-toe.html">Tic Tac Toe</a>
     </div>
 </body>
 </html>
