tic tac toe done, maybe add color changes.

--- a/sandbox/html/tic-tac-toe.html
+++ b/sandbox/html/tic-tac-toe.html
@@ -12,11 +12,12 @@
 
     <!-- CSS & JAVASCRIPT -->
     <link rel="stylesheet" href="../css/style6.css">
-    <script type="text/javascript" src="../funcTicTacToe.js"></script>
+    <script type="text/javascript" src="../javascript/funcTicTacToe.js"></script>
 </head>
 <body>
     <div id="background">
         <div id="board">
+            <div id="info-display"><p id="info-display-text">X Turn.</p></div>
             <div id="square1" class="board-box" onclick="counter(0)"></div>
             <div id="square2" class="board-box" onclick="counter(1)"></div>
             <div id="square3" class="board-box" onclick="counter(2)"></div>
