--- a/sandbox/html/aMoreProfessionalPortfolio.html
+++ b/sandbox/html/aMoreProfessionalPortfolio.html
@@ -14,14 +14,52 @@
     <link rel="stylesheet" href="../css/style3.css">
 </head>
 <body>
+    <!-- HEAD -->
     <div class="top-container">
         <img src="../imgs/cloud.png" alt="cloud" class="top-cloud">
-        <h1>Edsger Dijkstra</h1>
-        <p>Edsger Wybe Dijkstra; 11 May 1930 – 6 August 2002) was a Dutch computer scientist.</p>
+        <h1>Wenyin Yu</h1>
+        <h2>a <span>pro</span>grammer</h2>
         <img src="../imgs/cloud.png" alt="cloud" class="bottom-cloud">
         <img src="../imgs/mountain.png" alt="mountain">
     </div>
-    <div class="middle-container"></div>
-    <div class="bottom-container"></div>
+
+    <!-- PROFILE & SKILLS -->
+    <div class="middle-container">
+        <div class="profile">
+            <img src="../imgs/angela.png" alt="image-wenyin">
+            <h2>Hello.</h2>
+            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        </div>
+    <hr>
+    <div class="skills">
+            <h2>My Skills.</h2>
+        <div class="skill-row">
+            <img src="../imgs/computer.png" alt="image-computer" class="skill-img">
+            <h3>Lorem & Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+            <img src="../imgs/chillies.png" alt="chillies" class="skill-img">
+            <h3>Lorem Ipsum Dolor</h3>
+            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+    </div>
+    <hr>
+
+    <!-- CONTACT -->
+    <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+    </div>
+    </div>
+
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p>© Name Surname.</p>
+    </div>
 </body>
 </html>
