CREATE navbar for beerjs

--- a/sandbox/html/index.html
+++ b/sandbox/html/index.html
@@ -24,6 +24,7 @@
         <a href="absolutePosition.html">Ejercicio 4</a>
         <a href="absolutePosition.html">Ejercicio 5</a>
         <a href="tic-tac-toe.html">Tic Tac Toe</a>
+        <a href="bootstrap_ex1.html">Bootstrap Ex 1</a>
     </div>
 </body>
 </html>
