BOOTSTRAP GRID 6 - 4 - 1 appied in beerjs

--- a/sandbox/html/bootstrap_ex1.html
+++ b/sandbox/html/bootstrap_ex1.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    
+    <!-- NAVBAR -->
     <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
         <div class="container-fluid">
             <a href="https://github.com/beerjs" class="navbar-brand">
@@ -45,6 +45,59 @@
             </div>
         </div>
     </nav>
+
+    <!-- FLEXBOOK -->
+    <div class="parent">
+        <div class="child">1</div>
+        <div class="child">2</div>
+        <div class="child">3</div>
+        <div class="child">4</div>
+    </div>
     
+    <h1>
+        Cities
+    </h1>
+
+    <!-- BOOTSTRAP GRID 6 - 4 - 1 -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-2 col-md-3" style="border-radius: 10px; border: solid black;">
+                <div class="container-fluid">
+                    <img src="../imgs/mansion1.jpeg" class="img-fluid img-thumbnail" alt="Mansion 1">
+                </div>
+                Mansion 1
+            </div>
+            <div class="col-lg-2 col-md-3" style="border-radius: 10px; border: solid black;">
+                <div class="container-fluid">
+                    <img src="../imgs/mansion2.jpeg" class="img-fluid img-thumbnail" alt="Mansion 1">
+                </div>
+                Mansion 2
+            </div>
+            <div class="col-lg-2 col-md-3" style="border-radius: 10px; border: solid black;">
+                <div class="container-fluid">
+                    <img src="../imgs/mansion3.jpeg" class="img-fluid img-thumbnail" alt="Mansion 1">
+                </div>
+                Mansion 3
+            </div>
+            <div class="col-lg-2 col-md-3" style="border-radius: 10px; border: solid black;">
+                <div class="container-fluid">
+                    <img src="../imgs/mansion4.jpeg" class="img-fluid img-thumbnail" alt="Mansion 1">
+                </div>
+                Mansion 4
+            </div>
+            <div class="col-lg-2 col-md-3" style="border-radius: 10px; border: solid black;">
+                <div class="container-fluid">
+                    <img src="../imgs/mansion5.jpeg" class="img-fluid img-thumbnail" alt="Mansion 1">
+                </div>
+                Mansion 5
+            </div>
+            <div class="col-lg-2 col-md-3" style="border-radius: 10px; border: solid black;">
+                <div class="container-fluid">
+                    <img src="../imgs/mansion6.jpeg" class="img-fluid img-thumbnail" alt="Mansion 1">
+                </div>
+                Mansion 6
+            </div>
+        </div>
+    </div>
 </body>
 </html>
