--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -7,21 +7,19 @@
   	<title>TinDog</title>
 
 	<!-- BOOTSTRAP & CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" href="css/styles.css">
-
-	
 </head>
 
 <body>
   	<section id="title">
 		<!-- Nav Bar -->
-		<nav class="navbar navbar-dark navbar-expand-md sticky-top">
+		<nav class="navbar navbar-dark navbar-expand-md">
 			<div class="container-fluid">
 				<!-- Brandname -->
-				<a href="#" class="navbar-brand">🔥 TinDog</a>
+				<a href="#" class="navbar-brand">tindog</a>
 				<!-- Toggler Button -->
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -56,24 +54,22 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h1 id="main-title">Meet new and interesting dogs nearby.</h1>
-					<button type="button" class="btn btn-light"><i class="bi bi-apple"></i>
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-apple" viewBox="0 0 16 16">
+					<button type="button" class="btn btn-dark btn-lg">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-apple" viewBox="0 0 16 20">
 							<path d="M11.182.008C11.148-.03 9.923.023 8.857 1.18c-1.066 1.156-.902 2.482-.878 2.516.024.034 1.52.087 2.475-1.258.955-1.345.762-2.391.728-2.43Zm3.314 11.733c-.048-.096-2.325-1.234-2.113-3.422.212-2.189 1.675-2.789 1.698-2.854.023-.065-.597-.79-1.254-1.157a3.692 3.692 0 0 0-1.563-.434c-.108-.003-.483-.095-1.254.116-.508.139-1.653.589-1.968.607-.316.018-1.256-.522-2.267-.665-.647-.125-1.333.131-1.824.328-.49.196-1.422.754-2.074 2.237-.652 1.482-.311 3.83-.067 4.56.244.729.625 1.924 1.273 2.796.576.984 1.34 1.667 1.659 1.899.319.232 1.219.386 1.843.067.502-.308 1.408-.485 1.766-.472.357.013 1.061.154 1.782.539.571.197 1.111.115 1.652-.105.541-.221 1.324-1.059 2.238-2.758.347-.79.505-1.217.473-1.282Z"/>
 							<path d="M11.182.008C11.148-.03 9.923.023 8.857 1.18c-1.066 1.156-.902 2.482-.878 2.516.024.034 1.52.087 2.475-1.258.955-1.345.762-2.391.728-2.43Zm3.314 11.733c-.048-.096-2.325-1.234-2.113-3.422.212-2.189 1.675-2.789 1.698-2.854.023-.065-.597-.79-1.254-1.157a3.692 3.692 0 0 0-1.563-.434c-.108-.003-.483-.095-1.254.116-.508.139-1.653.589-1.968.607-.316.018-1.256-.522-2.267-.665-.647-.125-1.333.131-1.824.328-.49.196-1.422.754-2.074 2.237-.652 1.482-.311 3.83-.067 4.56.244.729.625 1.924 1.273 2.796.576.984 1.34 1.667 1.659 1.899.319.232 1.219.386 1.843.067.502-.308 1.408-.485 1.766-.472.357.013 1.061.154 1.782.539.571.197 1.111.115 1.652-.105.541-.221 1.324-1.059 2.238-2.758.347-.79.505-1.217.473-1.282Z"/>
 						</svg>
-						Download
+						Dowload
 					</button>
-					<button type="button" class="btn btn-dark">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google-play" viewBox="0 0 16 16">
+					<button type="button" class="btn btn-outline-light btn-lg">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-google-play" viewBox="0 0 16 20">
 							<path d="M14.222 9.374c1.037-.61 1.037-2.137 0-2.748L11.528 5.04 8.32 8l3.207 2.96 2.694-1.586Zm-3.595 2.116L7.583 8.68 1.03 14.73c.201 1.029 1.36 1.61 2.303 1.055l7.294-4.295ZM1 13.396V2.603L6.846 8 1 13.396ZM1.03 1.27l6.553 6.05 3.044-2.81L3.333.215C2.39-.341 1.231.24 1.03 1.27Z"/>
 						</svg>
 						Download
 					</button>
 				</div>
 				<div class="col-md-6">
-					<div>
-						<img src="images/iphone6.png" alt="iphone-mockup">
-					</div>
+					<img src="images/iphone6.png" alt="iphone-mockup" id="iphone-mockup">
 				</div>
 			</div>
 		</div>
@@ -81,16 +77,31 @@
 
   	<!-- Features -->
   	<section id="features">
-
-		<h3>Easy to use.</h3>
-		<p>So easy to use, even your dog could do it.</p>
-
-		<h3>Elite Clientele</h3>
-		<p>We have all the dogs, the greatest dogs.</p>
-
-		<h3>Guaranteed to work.</h3>
-		<p>Find the love of your dog's life or your money back.</p>
-
+		<div class="container-fluid">
+			<div class="row  text-center">
+				<div class="col-lg-4">
+					<svg xmlns="http://www.w3.org/2000/svg" width="80" height="100" fill="#FF4C68" class="bi bi-mouse-fill" viewBox="0 2 16 16">
+						<path d="M3 5a5 5 0 0 1 10 0v6a5 5 0 0 1-10 0V5zm5.5-1.5a.5.5 0 0 0-1 0v2a.5.5 0 0 0 1 0v-2z"/>
+					</svg>
+					<h3 class="feature-title">Easy to use.</h3>
+					<p class="feature-text">So easy to use, even your dog could do it.</p>
+				</div>
+				<div class="col-lg-4">
+					<svg xmlns="http://www.w3.org/2000/svg" width="80" height="100" fill="#FF4C68" class="bi bi-eyeglasses" viewBox="0 2 16 16">
+						<path d="M4 6a2 2 0 1 1 0 4 2 2 0 0 1 0-4zm2.625.547a3 3 0 0 0-5.584.953H.5a.5.5 0 0 0 0 1h.541A3 3 0 0 0 7 8a1 1 0 0 1 2 0 3 3 0 0 0 5.959.5h.541a.5.5 0 0 0 0-1h-.541a3 3 0 0 0-5.584-.953A1.993 1.993 0 0 0 8 6c-.532 0-1.016.208-1.375.547zM14 8a2 2 0 1 1-4 0 2 2 0 0 1 4 0z"/>
+					</svg>
+					<h3 class="feature-title">Elite Clientele</h3>
+					<p class="feature-text">We have all the dogs, the greatest dogs.</p>
+				</div>
+				<div class="col-lg-4">
+					<svg xmlns="http://www.w3.org/2000/svg" width="80" height="100" fill="#FF4C68" class="bi bi-hand-thumbs-up-fill" viewBox="0 2 16 16">
+						<path d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.965.22.816.533 2.511.062 4.51a9.84 9.84 0 0 1 .443-.051c.713-.065 1.669-.072 2.516.21.518.173.994.681 1.2 1.273.184.532.16 1.162-.234 1.733.058.119.103.242.138.363.077.27.113.567.113.856 0 .289-.036.586-.113.856-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.163 3.163 0 0 1-.488.901c.054.152.076.312.076.465 0 .305-.089.625-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.82 4.82 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.615.849-.232 1.574-.787 2.132-1.41.56-.627.914-1.28 1.039-1.639.199-.575.356-1.539.428-2.59z"/>
+					</svg>
+					<h3 class="feature-title">Guaranteed to work.</h3>
+					<p class="feature-text">Find the love of your dog's life or your money back.</p>
+				</div>
+			</div>
+		</div>
   	</section>
 
   	<!-- Testimonials -->
