CREAYE SASS Proy1

--- a/sass_proy1/index.html
+++ b/sass_proy1/index.html
@@ -15,6 +15,24 @@
     
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div class="grid">
+        <main class="grid__main">
+            <h1>
+                Hello World!
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed est massa, congue at aliquam id, vulputate sit amet lacus. Aenean convallis gravida ipsum vel porta. Aliquam erat volutpat. Morbi vel ipsum semper purus mollis pellentesque. Nam vitae sodales ipsum, quis pulvinar turpis. Nulla convallis egestas diam, non dapibus ex iaculis eu. Aenean tincidunt rutrum est, vitae posuere tortor ornare at. Cras feugiat, dolor eu pellentesque ullamcorper, nisi magna tristique leo, quis sodales odio mi et risus. In facilisis sed mi nec rhoncus. Etiam scelerisque sapien justo, a commodo velit ornare sit amet. Praesent imperdiet imperdiet congue. Curabitur nec vehicula nulla.
+            </p>
+        </main>
+        <aside class="grid__sidebar">
+            <h2>
+                More Info
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed est massa, congue at aliquam id, vulputate sit amet lacus. Aenean convallis gravida ipsum vel porta. Aliquam erat volutpat. Morbi vel ipsum semper purus mollis pellentesque. Nam vitae sodales ipsum, quis pulvinar turpis. Nulla convallis egestas diam, non dapibus ex iaculis eu. Aenean tincidunt rutrum est, vitae posuere tortor ornare at. Cras feugiat, dolor eu pellentesque ullamcorper, nisi magna tristique leo, quis sodales odio mi et risus. In facilisis sed mi nec rhoncus. Etiam scelerisque sapien justo, a commodo velit ornare sit amet. Praesent imperdiet imperdiet congue. Curabitur nec vehicula nulla.
+            </p>
+        </aside>
+    </div>
+    
 </body>
 </html>
